# slack-fortigate-automation

./: .env.example  .gitignore  README.md  cursor-단축키-정리.txt  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: apply.yml  expiry-alerts.yml  validate.yml
config/: devices.yaml  policy_rules.yaml
linux-lab/: .gitignore  README.md  SHARE.md  WSL-SETUP.md  check.sh  install-wsl-service.sh  setup.sh  start-docker.sh  wsl.conf.example
linux-lab/files/: users.txt
linux-lab/logs/: fileback
linux-lab/scenarios/01-log-incident/: SOLUTION.md  TASKS.md  anwer.txt
linux-lab/scenarios/02-permissions/: SOLUTION.md  TASKS.md
linux-lab/scenarios/03-disk-full/: SOLUTION.md  TASKS.md
linux-lab/scenarios/04-process-incident/: SOLUTION.md  (+2 more)
linux-lab/scripts/: count_user.sh
linux-lab/waf-lab/: README.md  check.sh  docker-compose.yml  start.sh  stop.sh
policies/: addresses.yaml  firewall_policies.yaml  services.yaml
slack_bot/: app.py  check_slack.py  github_pr.py  messages.py  metadata.py  notify_apply.py  notify_expiry.py  notify_validate.py  pr_audit.py  slack_post.py
src/fwgitops/: __init__.py  address_resolver.py  applier.py  cli.py  config.py  expiry.py  fortigate.py  loader.py  models.py  multi_device.py  planner.py  policy_naming.py  route_selector.py  router_monitor.py  service_resolver.py  validator.py
tests/: test_address_resolver.py  test_dryrun.py  test_expiry.py  test_multi_device.py  test_policy_naming.py  test_route_selector.py  test_router_monitor.py  test_service_resolver.py  test_slack_notifications.py  test_validator.py
(+25 files in other folders)
