[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fwgitops"
version = "0.1.0"
description = "GitOps-style Slack-driven automation for FortiGate firewall policies."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
bot = ["fastapi>=0.111", "uvicorn>=0.30", "slack-bolt>=1.18", "httpx>=0.27"]
dev = ["pytest>=8.2"]

[project.scripts]
fwctl = "fwgitops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
